[fix]header style

--- a/themes/chord/_config.yml
+++ b/themes/chord/_config.yml
@@ -8,5 +8,5 @@ menu:
     directory: archives/
   - page: about
     directory: about/
-  - page: rss
-    directory: atom.xml
+  - page: Contact
+    directory: contact/
