[add]sitemap generater

--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,10 @@ default_category: uncategorized
 category_map:
 tag_map:
 
+# Sitemap
+# hexo-generator-seo-friendly-sitemap - https://www.npmjs.com/package/hexo-generator-seo-friendly-sitemap
+sitemap:
+  path: sitemap.xml
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
