--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-seo-friendly-sitemap": "^0.0.22",
     "hexo-generator-tag": "^0.2.0",
     "hexo-render-pug": "^2.0.0",
     "hexo-renderer-marked": "^0.3.2",
