--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,18 @@ sitemap:
 date_format: YYYY-MM-DD
 time_format: HH:mm
 
+# RSS Feed
+# hexo-generator-feed - https://github.com/hexojs/hexo-generator-feed
+feed:
+  type: atom
+  path: feed.atom
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
