--- a/netlify.toml
+++ b/netlify.toml
@@ -2,50 +2,50 @@
   publish = "public/"
   command = "hexo generate"
 
-[[redirects]]
-  from = "http://simpleisbest.netlify.com/*"
-  to = "https://oldbigbuddha.dev/:splat"
-  forcus = true
+# [[redirects]]
+#   from = "http://simpleisbest.netlify.com/*"
+#   to = "https://oldbigbuddha.dev/:splat"
+#   forcus = true
 
-[[redirects]]
-  from = "https://simpleisbest.netlify.com/*"
-  to = "https://oldbigbuddha.dev/:splat"
-  forcus = true
+# [[redirects]]
+#   from = "https://simpleisbest.netlify.com/*"
+#   to = "https://oldbigbuddha.dev/:splat"
+#   forcus = true
 
-[[redirects]]
-  from = "http://oldbigbuddha.dev/*"
-  to = "https://oldbigbuddha.dev/:splat"
-  forcus = true
+# [[redirects]]
+#   from = "http://oldbigbuddha.dev/*"
+#   to = "https://oldbigbuddha.dev/:splat"
+#   forcus = true
 
-[[redirects]]
-  from = "http://blog.oldbigbuddha.net/*"
-  to = "https://oldbigbuddha.dev/:splat"
-  forcus = true
+# [[redirects]]
+#   from = "http://blog.oldbigbuddha.net/*"
+#   to = "https://oldbigbuddha.dev/:splat"
+#   forcus = true
 
-[[redirects]]
-  from = "https://blog.oldbigbuddha.net/*"
-  to = "https://oldbigbuddha.dev/:splat"
-  forcus = true
+# [[redirects]]
+#   from = "https://blog.oldbigbuddha.net/*"
+#   to = "https://oldbigbuddha.dev/:splat"
+#   forcus = true
 
-[[headers]]
-  for = "/*"
-  [headers.value]
-    Link = '''
-    </images/logo.png>; rel=preload; as=image
-    </css/base.css>; rel=preload; as=style
-    </css/style.css>; rel=preload; as=style
-    </css/header.css>; rel=preload; as=style
-    </css/footer.css>; rel=preload; as=style'''
+# [[headers]]
+#   for = "/*"
+#   [headers.value]
+#     Link = '''
+#     </images/logo.png>; rel=preload; as=image
+#     </css/base.css>; rel=preload; as=style
+#     </css/style.css>; rel=preload; as=style
+#     </css/header.css>; rel=preload; as=style
+#     </css/footer.css>; rel=preload; as=style'''
 
-[[headers]]
-  for = "/post/*"
-  [headers.value]
-    Link = '''
-    </css/post/post.css>; rel=preload; as=style
-    </css/post/share.css>; rel=preload; as=style
-    </css/post/tag.css>; rel=preload; as=style'''
+# [[headers]]
+#   for = "/post/*"
+#   [headers.value]
+#     Link = '''
+#     </css/post/post.css>; rel=preload; as=style
+#     </css/post/share.css>; rel=preload; as=style
+#     </css/post/tag.css>; rel=preload; as=style'''
 
-[[headers]]
-  for = '/'
-  [headers.value]
-    Link = '</css/index.css>; rel=preload; as=style'
+# [[headers]]
+#   for = '/'
+#   [headers.value]
+#     Link = '</css/index.css>; rel=preload; as=style'
