--- a/_config.yml
+++ b/_config.yml
@@ -99,3 +99,9 @@ deploy:
 clean_css:
   exclude:
     - "*.min.css"
+
+autoprefixer:
+  exclude:
+    - '*.min.css'
+  browsers:
+    - 'last 2 versions'
