--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Simple is Best
-subtitle:
-description: 京都産のプログラマがわからなかったことをメモする技術系のポエム集(?)
+subtitle: 〜 志は高く、目標は低く 〜
+description: OJI のメモ帳
 keywords:
 author: OldBigBuddha
 language: ja
